# TestDrivenDevelopment

./: BST.hs  BSTTests.hs  CHANGELOG.md  TestDrivenDevelopment.cabal  TestDrivenDevelopment.cabal.save  test-log.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: TestDrivenDevelopment-0.1.0.0-inplace.conf  package.cache
src/: BST.hs
test/: BSTTests.hs
