-- TestDrivenDevelopment.cabal

cabal-version:       >=1.10
name:                TestDrivenDevelopment
version:             0.1.0.0
build-type:          Simple

-- Brief description
synopsis:            TDD-based implementation of a binary search tree dictionary in Haskell
description:         A case study in test-driven development using Haskell, with unit and property-based tests.
license:             MIT
author:              Your Name
maintainer:          your.email@ntu.ac.uk
category:            Education
extra-source-files:  test-log.txt

-- The main library (BST and Dictionary modules)
library
  exposed-modules:     BST, Dictionary
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

-- Unit tests using HUnit
test-suite bst-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             BSTTests.hs
  build-depends:       base >=4.7 && <5,
                       HUnit,
                       TestDrivenDevelopment
  default-language:    Haskell2010

-- Property tests using QuickCheck (optional, for DictionaryTests.hs)
test-suite dictionary-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             DictionaryTests.hs
  build-depends:       base >=4.7 && <5,
                       QuickCheck,
                       TestDrivenDevelopment
  default-language:    Haskell2010
