cabal-version:       3.0
name:                TestDrivenDevelopment
version:             0.1.0.0
build-type:          Simple

-- Optional metadata
synopsis:            BST Dictionary using TDD in Haskell
description:         A functional dictionary implemented via a binary 
search tree, developed using test-driven development and unit testing.
category:            Education
author:              Frank Motsi
maintainer:          frank@example.com
license:             MIT
license-file:        LICENSE

-- === LIBRARY CONFIGURATION ===
library
  exposed-modules:     BST
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

-- === UNIT TEST CONFIGURATION ===
test-suite bst-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             BSTTests.hs
  build-depends:       base >=4.7 && <5,
                       HUnit,
                       TestDrivenDevelopment
  default-language:    Haskell2010

